[package]
name = "dnsip"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
hickory-resolver = { version = "0.24.2", features = ["tokio"] }
parse_duration = "2.1.1"
structopt = { version = "0.3.26", features = ["color", "wrap_help"] }
tokio = { version = "1.41.1", features = ["rt"] }
